[tool.poetry]
name = "bchain-api-wrappers"
version = "0.1.0"
description = "Simple blockchain api wrappers"
authors = ["Alex <alexei@guarda.co>"]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.3"
dnspython = "^2.1.0"
aiohttp = "^3.7.4"
pydantic = "^1.8.1"
python-graphql-client = "^0.4.3"
random-user-agent = "^1.0.1"
aiounittest = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
